fixtures/frontend/milestone-2/valid/map-set-literals/main.aivi
value directHeaders : Map Text Text =
    Map {
        "Authorization": "Bearer demo",
        "Accept": "application/json"
    }

value directTags : Set Text =
    Set ["news", "featured"]

fun keepHeaders : Map Text Text headers : Map Text Text =>
    headers

fun keepTags : Set Text tags : Set Text =>
    tags
