fixtures/frontend/milestone-2/invalid/duplicate-map-literal-key/main.aivi
val headers : Map Text Text =
    Map {
        "Authorization": "Bearer demo",
        "Authorization": "Bearer stale"
    }
